Add datasource endpoint to SDK (#18)
